--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,8 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top: 1px solid #ededed;
+  border-bottom: 1px solid #ededed;
 }
 .post__actions {
   display: grid;
