--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -5,10 +5,10 @@ block content
     .post
       .post__header 
         img.post__author-img(src='/img/users/profile-pic.jpg' alt='User profile picture')
-        span.post__author-name= post.authorId.username
+        a.link.post__author-name(href=`/profile/${post.author._id}`)= post.author.username
         svg.post__icon.post__options
           use(xlink:href="/icons/bootstrap-icons.svg#three-dots")
-      img.post__image(src="/img/posts/sample.jpg" alt="")
+      img.post__image(src=`/img/posts/${post.imageUrl[0]}` alt="")
       .post__actions
         svg.post__icon.post__action(class='bi')
           use(xlink:href="/icons/bootstrap-icons.svg#heart")
@@ -21,7 +21,12 @@ block content
           use(xlink:href="/icons/bootstrap-icons.svg#bookmark")
       .post__content
         .post__likes= `${post.likeCount} likes`
-        .post__description !{`<a href='#' class='link'>${post.authorId.username}</a> ${post.description}`}  
+        .post__description !{`<a href='#' class='link'>${post.author.username}</a> ${post.description}`}  
+
+        - if(post.comments)
+          each comment in post.comments
+            .post__description !{`<a href=\`${comment.authorId._id}\` class='link'>${comment.authorId.username}</a> ${comment.content}`}  
+
         .post__view-comments View all comments
         .post__date= new Intl.DateTimeFormat('en-US', { year: 'numeric', month: 'long', day: 'numeric' }).format(post.createdAt)
       .post__comment
